@@ -3,6 +3,10 @@ Changelog
 
 10.2.dev0 - (unreleased)
 ------------------------
+* Feature: html body field for daviz and gis application
+    - added new field "body"
+    - modified the view template
+  [chiridra refs #70146]
 
 10.1 - (2016-03-14)
 -------------------
